[package]
name = "aws_tui_toolkit"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = { version = "1.6.2", features = ["behavior-version-latest", "rt-tokio"] }
aws-runtime = "1.5.7"
aws-sdk-s3 = { version = "1.85.0", features = ["rt-tokio"] }
aws-types = "1.3.7"
color-eyre = "0.6.4"
crossterm = { version = "0.29.0", features = ["event-stream"] }
dirs = "6.0.0"
fuzzy-matcher = "0.3.7"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
textwrap = "0.16.2"
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tui-logger = { version = "0.17.2", features = ["crossterm", "tracing", "tracing-subscriber", "tracing-support"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "none"
panic = "unwind"
incremental = false
debug = true

[features]
default = []  # Default features
logging = []  # Logging feature
